--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 $color-principal: rgb(1, 36, 7);
-$color-secundario: #55704D;
+$color-secundario: #55704d;
 $color-hover: #103824;
 $color-fondo: rgb(177, 190, 184);
 $color-footer: #384b33;
@@ -24,4 +24,4 @@ $color-primario-producto-hover: #0a8a00;
 $color-fondo-producto: #f6f6f6;
 $color-texto-producto: #333;
 $color-descuento-producto: green;
-$fuente-principal-producto: 'Oswald', sans-serif;
+$fuente-principal-producto: "Oswald", sans-serif;
