--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,16 @@
-@import '../scss/base/variables';
-@import  '../scss/base/mixins';
+@import "../scss/base/variables";
+@import "../scss/base/mixins";
 
-@import  '../scss/Layout/body';
-@import  '../scss/Layout/main';
-@import  '../scss/Layout/footer';
-@import  '../scss/Layout/header';
-@import  '../scss/Layout/ppff';
-@import  '../scss/Layout/sobrenosotros_principal';
+@import "../scss/Layout/body";
+@import "../scss/Layout/main";
+@import "../scss/Layout/footer";
+@import "../scss/Layout/header";
+@import "../scss/Layout/ppff";
+@import "../scss/Layout/sobrenosotros_principal";
 
-
-@import  '../scss/components/tarjetas';
-@import  '../scss/components/form';
-@import '../scss/components/productos';
-@import '../scss/components/beneficios';
-@import  '../scss/mediaqueries';
+@import "../scss/components/tarjetas";
+@import "../scss/components/clientes";
+@import "../scss/components/form";
+@import "../scss/components/productos";
+@import "../scss/components/beneficios";
+@import "../scss/mediaqueries";
