--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -3,52 +3,49 @@ header {
     color: antiquewhite;
     background-color: rgba(0, 0, 0, 0.4);
 
-    .nav-item .nav-link { 
-      color: white; 
-      font-size: 20px;
-      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    .nav-item{
-      &:hover {
-      background-color: $color-hover;
+    .nav-item .nav-link {
       color: white;
-      border-radius: 15px;
-    }
-  }
-
- .icono-contenedor{
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    
-  }
-  .icono{
-    font-size: 50px;
-    color:whitesmoke;
-  }
-  h1{
-    display: none;
-  }
-
-  ul {
-    list-style: none;
-    gap: 20px;
-    text-align: center;
-
+      font-size: 20px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     }
 
-}
-}
-  #logo_principal {
-    width: 10%;
-    height: auto;
-    padding-right: 50px;
+    .nav-item {
+      &:hover {
+        background-color: $color-hover;
+        color: white;
+        border-radius: 15px;
+      }
+    }
+
+    .icono-contenedor {
+      display: flex;
+      gap: 40px;
+      justify-content: center;
+    }
+    .icono {
+      font-size: 50px;
+      color: whitesmoke;
+    }
+    h1 {
+      display: none;
+    }
+
+    ul {
+      list-style: none;
+      gap: 20px;
+      text-align: center;
+    }
   }
+}
+#logo_principal {
+  width: 10%;
+  height: auto;
+  padding-right: 50px;
+}
 .fondo_encabezado {
   background-image: url(../assets/fondos/mate_paisaje_3.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 90vh;
   color: white;
-  }
+}
