--- a/scss/Layout/_main.scss
+++ b/scss/Layout/_main.scss
@@ -2,7 +2,9 @@ main {
   flex: 1;
   min-height: 80vh;
 
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     text-align: center;
     font-family: $fuente-principal;
   }
