--- a/scss/Layout/_ppff.scss
+++ b/scss/Layout/_ppff.scss
@@ -2,7 +2,6 @@
   max-width: 900px;
   margin: 40px auto;
   padding: 0 20px;
-  
 
   .ppff-item {
     background-color: #b4e5af;
@@ -10,7 +9,6 @@
     margin-bottom: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     overflow: hidden;
-   
 
     summary {
       font-weight: bold;
@@ -47,6 +45,12 @@
 }
 
 @keyframes fadein {
-  from { opacity: 0; transform: translateY(-5px); }
-  to   { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
